# jobs_dispatcher

./: Cargo.toml  vertex.yml
example/data/: dispatcher.yml  helloWorld.yml  queue.yml  vertex.yml
src/: client.rs  dispatcher.rs  executor.rs  http.rs  http_utils.rs  jobs.rs  jobs_management.rs  lib.rs  main.rs  queue.rs  queue_management.rs  request_util.rs  resources.rs  resources_management.rs  supervisor.rs  unix.rs  utils.rs  vertex.rs  vertex_client.rs
