[package]
name = "job_dispatcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgroups-rs = "0.3.3"
libc = "0.2.147"
tokio = { version = "1.32.0", features = ["full"] }
axum = "0.6.20"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.25"
serde_json = "1.0.106"
dns-lookup = "2.0.2"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]